# decorated-cospans

./: CHANGELOG.md  README.md  decorated-cospans.cabal  default.nix  result  shell-hoogle.nix  shell.nix
.github/workflows/: ci.yml
app/: Main.hs
docs/: SIR_model.html
example-sir/: Main.hs
nix/: sources.json
scripts/: hoogle  pushCachix
src/: Cospan.hs  DecoratedCospans.hs  Petri.hs
src/Cospan/: Structured.hs
src/Cospan/Models/: Sir.hs
src/Cospan/Structured/Models/: Sir.hs
src/Petri/: Stochastic.hs
src/Petri/Models/: Sir.hs
