cabal-version:       2.4
name:                decorated-cospans
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/o1lo01ol1o/decorated-cospans
bug-reports:         https://github.com/o1lo01ol1o/decorated-cospans/issues
license:             MIT
license-file:        LICENSE
author:              o1lo01ol1o
maintainer:          o1lo01ol1o <tim.pierson@gmail.com>
copyright:           2021 o1lo01ol1o
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/o1lo01ol1o/decorated-cospans.git

common common-options
  build-depends:       base ^>= 4.13.0.0
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     DecoratedCospans

executable decorated-cospans
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       decorated-cospans
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite decorated-cospans-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       decorated-cospans
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark decorated-cospans-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       gauge
                     , decorated-cospans
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
