cabal-version:   3.0
name:            decorated-cospans
version:         0.0.0.0
synopsis:        See README for more info
description:     See README for more info
homepage:        https://github.com/o1lo01ol1o/decorated-cospans
bug-reports:     https://github.com/o1lo01ol1o/decorated-cospans/issues
license:         MIT
author:          o1lo01ol1o
maintainer:      o1lo01ol1o <tim.pierson@gmail.com>
copyright:       2021 o1lo01ol1o
build-type:      Simple
extra-doc-files:
  README.md
  CHANGELOG.md

tested-with:     GHC ==8.8.4

source-repository head
  type:     git
  location: https://github.com/o1lo01ol1o/decorated-cospans.git

common common-options
  build-depends:
    , algebraic-graphs
    , base                 ^>=4.13.0.0
    , bifunctors
    , containers
    , finitary
    , matrix
    , monoidal-containers
    , mtl
    , transformers
    , vector

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates

  if impl(ghc >=8.0)
    ghc-options: -Wredundant-constraints

  if impl(ghc >=8.2)
    ghc-options: -fhide-source-paths

  if impl(ghc >=8.4)
    ghc-options: -Wmissing-export-lists -Wpartial-fields

  if impl(ghc >=8.8)
    ghc-options: -Wmissing-deriving-strategies

  default-language: Haskell2010

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules:
    Petri
    Petri.Stochastic

test-suite decorated-cospans-test
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  build-depends:  decorated-cospans
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

benchmark decorated-cospans-benchmark
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: benchmark
  main-is:        Main.hs
  build-depends:
    , decorated-cospans
    , gauge

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

executable example-sir
  import:         common-options
  hs-source-dirs: example-sir
  main-is:        Main.hs
  build-depends:
    , base
    , blaze-html
    , containers
    , decorated-cospans
    , here
    , hmatrix
    , hmatrix-gsl
    , hvega
    , knit-haskell       >=0.8.0.0
    , plots
    , polysemy
    , polysemy-plugin
    , text

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
